--- a/src/views/support/supportDetails/SupportDetails.module.scss
+++ b/src/views/support/supportDetails/SupportDetails.module.scss
@@ -53,7 +53,7 @@
           color: rgb(49, 49, 49);
         }
         &.chatBubbleRight {
-          background-color: $primary-color;
+          background-color: var(--primary);
           color: white;
           // add a border to the right side making it look like a chat bubble
           border-top-right-radius: 10;
