--- a/src/views/admin/plans_and_features/subviews/plansManagement/PlanModal.css
+++ b/src/views/admin/plans_and_features/subviews/plansManagement/PlanModal.css
@@ -80,8 +80,37 @@
   color: #ffffff !important;
 }
 
+/* Select dropdown styling */
+.ant-select-dropdown {
+  background-color: rgba(20, 20, 20, 0.95) !important;
+}
+
+.ant-select-item {
+  color: #ffffff !important;
+}
+
+.ant-select-item:hover {
+  background-color: rgba(255, 255, 255, 0.1) !important;
+  color: #ffffff !important;
+}
+
+.ant-select-item-option-selected {
+  background-color: rgba(24, 144, 255, 0.3) !important;
+  color: #ffffff !important;
+}
+
+.ant-select-item-option-active {
+  background-color: rgba(255, 255, 255, 0.05) !important;
+  color: #ffffff !important;
+}
+
+/* Select placeholder and selected text */
 .ant-modal .ant-select-selection-placeholder {
   color: rgba(255, 255, 255, 0.5) !important;
+}
+
+.ant-modal .ant-select-selection-item {
+  color: #ffffff !important;
 }
 
 .ant-modal .ant-input-number {
