--- a/src/views/users/userDetails/UserDetails.module.scss
+++ b/src/views/users/userDetails/UserDetails.module.scss
@@ -352,7 +352,7 @@
   :global(.ant-input) {
     // background-color: rgba(0, 0, 0, 0.3) !important;
     // border: 1px solid var(--color-metallic-blue-dark) !important;
-    // color: var(--color-silver) !important;
+    color: var(--color-silver) !important;
   }
 
   :global(.ant-input-affix-wrapper) {
