--- a/src/views/account_details/AccountDetails.module.scss
+++ b/src/views/account_details/AccountDetails.module.scss
@@ -10,5 +10,12 @@
     padding: 1rem;
     margin: 5px 5px;
     width: 100%;
+
+    .imageContainer{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center; 
+    }
   }
 }
