--- a/src/app/error.module.scss
+++ b/src/app/error.module.scss
@@ -1,8 +1,6 @@
 // error.module.scss
 .container {
   min-height: 100vh;
-  background: var(--bg-gradient);
-  color: white;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -66,7 +64,7 @@
 
 .description {
   font-size: var(--font-size-md);
-  color: var(--color-silver);
+  // color: var(--color-silver);
   margin: 0 0 var(--spacing-md) 0;
   line-height: 1.6;
 
@@ -81,7 +79,7 @@
 }
 
 .detailsContainer {
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.534);
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: var(--radius-md);
   padding: var(--spacing-md);
@@ -135,8 +133,8 @@
   padding: var(--spacing-sm) var(--spacing-lg);
   border: 2px solid rgba(255, 255, 255, 0.3);
   border-radius: var(--radius-md);
-  background: rgba(255, 255, 255, 0.1);
-  color: white;
+  background: rgba(255, 255, 255, 0.815);
+  // color: white;
   font-size: var(--font-size-sm);
   font-weight: var(--font-weight-medium);
   cursor: pointer;
